fix: Unregister member from security server
cucumber for used servers

Refs: XRDDEV-2652